# SOFT5

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  INSTALL.md  README.md
cmake/: toolchain-win64.cmake
cmake/Dependencies/: CMakeLists-bson.txt  CMakeLists-gtest.txt  CMakeLists-hdf5.txt  CMakeLists-mongoc.txt  TryRunResults-win64-hdf5.cmake  build-gtest.cmake.in  build-hdf5.cmake.in  build-mongoc.cmake.in  hdf5.patch1  hdf5.patch2
cmake/Modules/: BuildExternalProject.cmake  FindBSON.cmake  FindMONGOC.cmake  FindNumpy.cmake
core/src/kernel/: CMakeLists.txt  Soft  collection.cpp  collection.h  config.h.in  entity.h  idatamodel.cpp  idatamodel.h  ientity.cpp  ientity.h  istoragestrategy.cpp  istoragestrategy.h  soft.cpp  soft.h  softtypes.h  storage.cpp  storage.h  storagefactory.cpp  storagefactory.h  storagestrategy.h  transactor.cpp  tripletstore.cpp  tripletstore.h  variant.h
core/test/kernel/: CMakeLists.txt  collectiontest.cpp  storagetest.cpp  testentity.cpp  testentity.h  tripletstest.cpp  varianttest.cpp
core/test/kernel/entities/: CMakeLists.txt
core/test/kernel/templates/: ccode.cjs  ccode.hjs
doc/: CMakeLists.txt  Doxyfile.in  frontpage.md
doc/manual/: 01_preface.md  02_soft_introduction.md  03_porto_overview.md  04_usecase1.md  05_usecase2.md  06_usecase3.md  07_usecase4.md  INSTALL.md  genmanual.sh
foreign/c/example/autogen/: CMakeLists.txt
foreign/c/example/autogen/entities/: CMakeLists.txt  simple.json
foreign/c/example/autogen/fortran/: CMakeLists.txt  calc.f90  demo.f90  f_c_simple.h  simple.f90
foreign/c/example/autogen/src/: CMakeLists.txt  main.c
foreign/c/example/autogen/templates/: ccode.cjs  ccode.hjs  fcode.fjs
foreign/c/src/softc/: CMakeLists.txt  softc-allocatable.c  softc-allocatable.h  softc-block-private.h  softc-block.c  softc-block.h  softc-bytearray-private.hpp  softc-bytearray.cpp  softc-collection-private.cpp  softc-collection-private.h  softc-collection.c  softc-collection.h  softc-datamodel-private.cpp  softc-datamodel-private.h  softc-datamodel.c  softc-datamodel.cpp  softc-datamodel.h  softc-entity.c  softc-entity.h  softc-eventloop-private.cpp  softc-private.cpp  softc-private.h  softc-storage-plugin.h  softc-storage-private.cpp  softc-storage-private.h  softc-storage-strategy-private.cpp  softc-storage-strategy-private.h  softc-storage-strategy.c  softc-storage-strategy.h  softc-storage.c  softc-storage.h  softc-string-list.cpp  softc-string-list.h  softc-string-private.hpp  softc-string.cpp  softc-string.h  softc-types.cpp  softc-utils.c  softc-vector.c  softc-vector.h  (+2 more)
foreign/doc/: foreign.md
foreign/python/src/softpy/: CMakeLists.txt  __init__.py  collection.py  converters.py  entity.i  entity.py  metadata.py  softpy-bytearray.i  softpy-collection.i  softpy-datamodel.i  softpy-entity.i  softpy-python.i  softpy-string-list.i  softpy-string.i  softpy-typemaps.i  softpy.i  storage.py  translators.py  utils.py
foreign/python/test/softpy/: .gitignore  CMakeLists.txt  eu.nanosim.vasp.extraction.json  softpy-test-collection.py  softpy-test-converter.py  softpy-test-datamodel.py  softpy-test-entity.py  softpy-test-factory.py  softpy-test-string-list.py  softpy-test-string.py  softpy-test-translators.py  softpy-test.py  test_softpy.py
numerics/src/sim/: CMakeLists.txt  sim-context.c  sim-context.h  sim-handle.c  sim-handle.h  sim-private.h  sim.cpp  sim.h
numerics/test/sim/: CMakeLists.txt  main.cpp
porto/doc/: workflow-example.html
porto/examples/: entity.js
porto/examples/chemkin_generator/: entity.js  inspectChemkinReactionEntity.js
porto/examples/parscale/: effectiveness-to-entities.js  generate-effectiveness-udf.js
porto/examples/remarc/: Chemkin.inp  SurfaceChemkin.inp  output_surface.txt  rate_des.out  rate_surf.out  remark-wrapper  thermo_barrier.out  thermo_des.out  thermo_reac.out
porto/src/chemkin/: CMakeLists.txt  chemkin.cpp
porto/src/dft-prepare/: main.cpp
porto/src/entities/: CMakeLists.txt  chemkin_reaction.json  chemkinreaction.json  effectivenessfactor.json  effectivereactionparameters.json  file.json
porto/src/json/: CMakeLists.txt  json.cpp  json.h
porto/src/parscale-effectiveness-factor/: generate-effectiveness-udf.js  main.cpp
porto/src/phenom/: create-phenom-input-entity.js  define_phenom_input.js  make-phenom-input.js
porto/src/remarc-wrapper/: main.cpp  portooutput.cpp  (+2 more)
storage/src/hdf5/: CMakeLists.txt  qh5.cpp
storage/src/plugins/json/: CMakeLists.txt  Makefile  jsonmodel.cpp  jsonmodel.h  jsonstorage.cpp  jsonstorage.h  jsonstrategy.cpp  jsonstrategy.h  jsonstrategyplugin.cpp
storage/test/mongo/: CMakeLists.txt  mongotest.cpp  qbsontest.cpp
storage/test/plugins/json/: CMakeLists.txt  jsonplugintest.cpp
tools/: CMakeLists.txt
tools/src/hsm/: CMakeLists.txt  workflow.h
tools/src/plugins/common/: CMakeLists.txt
tools/src/plugins/hsm/: CMakeLists.txt  workflow.cpp
tools/src/plugins/hsm/example/: proc-evaluate.js  proc-guess.js  proc-seed.js
tools/src/plugins/mongo/: CMakeLists.txt
tools/src/plugins/nlopt/: CMakeLists.txt  qnloptprototype.cpp
tools/src/plugins/soft-kernel/: CMakeLists.txt  genericentity.cpp  genericentity.h  qcollection.cpp  qcollection.h  qentity.cpp  qentity.h  qgenericentity.cpp  qgenericentity.h  qstorage.cpp  qstorage.h  soft-kernel-plugin.cpp
tools/src/softshell/: CMakeLists.txt  filesystemwatcher.cpp  scriptplugins.cpp  softshell.cpp  utils.cpp
tools/src/softshell/modules/porto/: entity.js  factory.js  storage.js
tools/src/softshell/modules/simcoflow/: base.js  base.js~
tools/src/softshell/modules/soft/: entity.js  storage.js
tools/src/softshell/modules/soft/forge/: capi.js  cppapi.js
tools/src/softshell/modules/soft/storage/: function hdf5.js~  mongo.js
tools/src/softshell/modules/soft/translator/: #SamplePforce_0_1-SNAPSHOT-4_C3PO_sample_force_0_1-SNAPSHOT-1.js#
tools/src/softshell/modules/soft/utils/: metastore.js
tools/src/softshell/modules/utils/: qstestlib.js
tools/src/web/webserver/: CMakeLists.txt
tools/src/web/webserver/res/: configure.js
tools/storage/src/mongo/: CMakeLists.txt
(+130 files in other folders)
